<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="action_share">Share</string>
    <string name="action_rate_app">Rate app</string>
    <string name="action_undo">Undo</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="score">Score</string>
    <string name="highest">Highest</string>

</resources>
