<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_share" android:orderInCategory="100"
        android:showAsAction="ifRoom" android:title="@string/action_share">
    </item>
    <item android:id="@+id/action_rate_app" android:orderInCategory="100" 
        android:title="@string/action_rate_app" android:showAsAction="ifRoom">
    </item>
    <item android:id="@+id/action_undo" android:orderInCategory="100" 
        android:title="@string/action_undo" android:showAsAction="ifRoom">
    </item>
    <item android:id="@+id/action_settings" android:orderInCategory="100" 
        android:title="@string/action_settings" android:showAsAction="ifRoom">
    </item>
    <item android:id="@+id/action_help" android:orderInCategory="100" 
        android:title="@string/action_help" android:showAsAction="ifRoom">
    </item>

</menu>
